--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </td>
       <td>
         <h1>Giuseppe Scivoletto</h1>
-        <p><em>Aspirante <strong><a href="https://www.google.it">Web Developer</a></strong></em></p>
+        <p><em>Aspirante <strong><a href="https://peps17.github.io/cv/">Web Developer</a></strong></em></p>
         <p>Ci sto provando almeno</p>
       </td>
   </table>
